--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   linux-x64:
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        java: [ 16, 16.0.1 ]
     steps:
       - name: Install packages
         run: sudo apt install axel libasound2-dev libavcodec-dev libavformat-dev libavutil-dev libgl-dev libgtk-3-dev libpango1.0-dev libxtst-dev xdg-utils libc6 xdg-utils zlib1g libpng16-16 libasound2 libbsd-dev zip libblkid1 libdbus-1-3 libexpat1 libgpg-error0 liblzma5 libmount1 libpcre3 libselinux1 libsystemd0 libuuid1
@@ -16,7 +19,7 @@ jobs:
       - name: Setup java
         uses: actions/setup-java@v2
         with:
-          java-version: 16
+          java-version: ${{ matrix.java }}
           distribution: adopt
           architecture: x64
       - name: Setup JavaFX
